docs: rewrite documentation and README for 2026 Serverless Cloud-native architecture